# BL2-BLTPS-Docs

./: README.md
BL1Mods/FOVController/: bl1_fov_controller.7z
BL1Mods/FOVController/bl1_fov_controller/: __init__.py  pyproject.toml
BL2Mods/BLCMM/: MongolFix_BL2.blcm
BLCM-Stuff/: ControllerToPawnTemplate.blcm  MongolFix_TPS.blcm
BLCMM/: WeaponMenuSwapWatcher.blcm  ammo_absorbed_hud_effect.blcm
BPDs/: BL2-BLTPS_Behaviors  BLTPS_Templates.txt  BPDs_Templates.txt  BPDs_Templates_For_TPS.txt  ConsolidatedVariableLinkData.txt  Misc.txt  Miscellaneous.txt  TPS_Behaviors.txt  VariableData.txt
BehaviorProviderDefinitions/: Templates.md  Templates.txt  templates.md  templates.txt  tps_templates.txt  variable_data.md  variable_data.txt
Behaviors/: All_Behaviors.txt  BL2_Behaviors  BLTPS_Behaviors.txt
Classes/: All_AttributeContextResolver.txt  All_AttributeValueResolver.txt  All_Behaviors.txt  All_ExpressionEvaluators.txt
Oz Kits/Max Levels Stats/: CatharticAndJuggernautNotes.txt  _Notes.txt
Particles/: BL2_Particles_ressources_with_packages.txt  BLTPS_Particles_ressources_with_packages.txt.txt  Miscellaneous.txt
Python/: get_actors_in_radius_of_player.py
Python/Behaviours/: aipawn_skills.py  classes.py  pybehaviors.py  startup.py
zeta-bpd-helper_extensions/: README.md  Readme.md
zeta-bpd-helper_extensions/snippets-codes/: README.md  ReadMe.md
